# ai-avatar

./: .env.example  .gitignore  Dockerfile  README.md  azure.yaml  github-issue-template.md  pyproject.toml  requirements.txt
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json  docker-compose.yml  requirements-dev.txt  setup-python.sh  startup.sh
docs/: technical-design-document.md
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/core/ai/: speech-services.bicep
infra/core/host/: container-app.bicep  container-apps-environment.bicep  container-registry.bicep
infra/core/monitor/: applicationinsights.bicep  loganalytics.bicep
infra/core/security/: keyvault-secrets.bicep  keyvault.bicep  managed-identity.bicep
infra/core/storage/: storage-account.bicep
scripts/: azure_setup.sh  test_speech.py
src/: __init__.py  app.py
src/api/: __init__.py  routes.py
src/auth/: __init__.py  auth_manager.py
src/avatar/: __init__.py  avatar_manager.py
src/input/: __init__.py  input_processor.py
src/llm/: __init__.py  openai_service.py
src/speech/: __init__.py  azure_speech.py
src/utils/: __init__.py
static/css/: chat.css  style.css
static/image/: placeholder.txt
static/js/: app.js  avatar.js  chat-azure.js
static/video/: placeholder.txt
templates/: chat.html  index.html  login.html
tests/: conftest.py  test_auth.py  test_chat.py  test_ui.py
